[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/menu_controls/button_start_pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/main_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/menu_controls/button_options.png" type="Texture" id=3]
[ext_resource path="res://assets/menu_controls/button_start.png" type="Texture" id=4]
[ext_resource path="res://assets/menu_controls/button_credits.png" type="Texture" id=5]
[ext_resource path="res://assets/menu_controls/button_credits_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/menu_controls/button_exit.png" type="Texture" id=7]
[ext_resource path="res://assets/menu_controls/button_options_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/menu_controls/button_exit_pressed.png" type="Texture" id=9]
[ext_resource path="res://scenes/title_screen.gd" type="Script" id=10]

[sub_resource type="InputEventAction" id=1]
action = "ui_accept"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="TitleText" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 182.0
margin_right = 640.0
margin_bottom = 224.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Night of the Living Turkeys[/center]"
text = "Night of the Living Turkeys"
fit_content_height = true
scroll_active = false

[node name="UpperButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 228.0
margin_right = 640.0
margin_bottom = 261.0
alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer/UpperButtons"]
margin_left = 219.0
margin_right = 318.0
margin_bottom = 33.0
rect_min_size = Vector2( 99, 33 )
shortcut = SubResource( 2 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
expand = true

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer/UpperButtons"]
margin_left = 322.0
margin_right = 421.0
margin_bottom = 33.0
rect_min_size = Vector2( 99, 33 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
expand = true

[node name="LowerButtons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 265.0
margin_right = 640.0
margin_bottom = 298.0
alignment = 1

[node name="CreditsButton" type="TextureButton" parent="VBoxContainer/LowerButtons"]
margin_left = 219.0
margin_right = 318.0
margin_bottom = 33.0
rect_min_size = Vector2( 99, 33 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
expand = true

[node name="ExitButton" type="TextureButton" parent="VBoxContainer/LowerButtons"]
margin_left = 322.0
margin_right = 421.0
margin_bottom = 33.0
rect_min_size = Vector2( 99, 33 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true

[connection signal="pressed" from="VBoxContainer/UpperButtons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/UpperButtons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LowerButtons/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/LowerButtons/ExitButton" to="." method="_on_ExitButton_pressed"]
